k8s/ingress/ilyin-website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ilyin-website-ingress
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: nginx     
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - www.ilyin.website
    secretName: www.ilyin.website-tls
  rules:
  - host: www.ilyin.website
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: www-ilyin-website-service
              port:
                number: 8080
